# adjustable_single_term_graph_diffusion_learning_v2

./: .gitignore  README.md  pyproject.toml
simplified_graph_diffusion/: __init__.py
simplified_graph_diffusion/gcn/: utils.py
simplified_graph_diffusion/results/graph_filter_comparison/: arx_alpha0.50_summary.csv  citeseer_alpha0.50_summary.csv  cora_alpha0.50_summary.csv  graph_filter_comparison_20251108_053415.json  graph_filter_comparison_20251108_053540.json  graph_filter_comparison_20251108_060713.json  graph_filter_comparison_20251108_060949.json  graph_filter_comparison_20251108_061137.json  graph_filter_comparison_20251108_061702.json  graph_filter_comparison_20251108_061720.json  graph_filter_comparison_20251110_065835.json  pubmed_alpha0.50_summary.csv
simplified_graph_diffusion/results/n_hop_gnn_comparison/: n_hop_gnn_comparison_20251110_033220.json  n_hop_gnn_comparison_20251110_034515.json  n_hop_gnn_comparison_20251110_143138.json  n_hop_gnn_comparison_20251110_cora_citeseer_k2345_alpha_0.3.json  n_hop_gnn_comparison_20251110_cora_citeseer_k6789_alpha_0.3.json
simplified_graph_diffusion/sc_dw/: model.py
simplified_graph_diffusion/scripts/: __init__.py  graph_filter_comparison.py  graph_filter_json_to_csv.py  graph_filter_plot_from_json.py  n_hop_gnn_comparison.py  run_gae.py  run_gcn.py  run_logreg_mlp.py  run_sc_dw.py  run_vgae.py
