[project]
name = "adjustable-single-term-graph-diffusion-learning"
version = "0.1.0"
description = "Experiments for adjustable single-term graph diffusion learning."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Project Contributors" }]
dependencies = [
    "networkx>=2.8",
    "numpy>=1.24",
    "pandas>=1.5",
    "retrying>=1.3.3",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "torch>=2.2",
]

[project.optional-dependencies]
baseline = ["node2vec>=0.4.3"]
notebook = ["ipykernel>=6.0", "jupyterlab>=4.0"]

[project.scripts]
run-gae = "simplified_graph_diffusion.scripts.run_gae:main"
run-vgae = "simplified_graph_diffusion.scripts.run_vgae:main"
run-gcn = "simplified_graph_diffusion.scripts.run_gcn:main"
run-logreg-mlp = "simplified_graph_diffusion.scripts.run_logreg_mlp:main"
run-sc-dw = "simplified_graph_diffusion.scripts.run_sc_dw:main"
